--- a/demo/client/app/components/demo/demo.scss
+++ b/demo/client/app/components/demo/demo.scss
@@ -2,7 +2,7 @@ demo section {
   padding: 15px;
   border-bottom: solid 1px #555555;
 }
-demo section textarea {
+demo section textarea.code {
   margin-top: 15px;
   width:100%;
   direction: ltr;
