--- a/src/custom-input/autocomplete.scss
+++ b/src/custom-input/autocomplete.scss
@@ -7,15 +7,19 @@
     width: 187px;
     min-width: 100%;
   }
+
   [dialog].autocomplete .dialog-trigger {
     display: none;
   }
+
   [dialog].autocomplete .dialog {
     position: static;
   }
+
   [dialog].autocomplete .dialog div.dialog-wrap {
     padding: 5px 0;
   }
+
   .autocomplete .row-autocomplete {
     font-weight: 500;
     font-size: 15px;
@@ -27,19 +31,22 @@
   }
 
   .selected-arrow {
-    background: #eeeeee;
+    background: #eee;
   }
+
   .autocomplete .row-autocomplete:hover {
-    background: #eeeeee;
+    background: #eee;
   }
+
   .autocomplete .row-autocomplete.empty {
-    color: #888888;
+    color: #888;
   }
+
   .autocomplete .highlight {
     color: mediumblue;
   }
 
-   [dialog] .dialog div.dialog-wrap {
+  [dialog] .dialog div.dialog-wrap {
     max-height: 176px;
     overflow-x: scroll;
   }
