form validation in demo page

--- a/demo/client/app/components/demo/demo.scss
+++ b/demo/client/app/components/demo/demo.scss
@@ -2,10 +2,16 @@ demo section {
   padding: 15px;
   border-bottom: solid 1px #555555;
 }
+
+demo .custom-input {
+  display: inline-block;
+}
+
 demo section textarea.code {
   margin-top: 15px;
-  width:100%;
+  width: 100%;
   direction: ltr;
   text-align: left;
   resize: none;
 }
+
