--- a/demo/client/app/components/demo/demo.html
+++ b/demo/client/app/components/demo/demo.html
@@ -1,56 +1,104 @@
-<form name ="vm.demoForm">
+<form name="vm.demoForm">
   <section>
     <h1>Checkbox</h1>
-    <checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox>
-    <textarea disabled class="code"><checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox></textarea>
+    <checkbox model="vm.checkboxChecked"
+      bind-id="checkbox"
+      label="מסומן"></checkbox>
+    <textarea disabled
+      class="code"><checkbox model="vm.checkboxChecked" bind-id="checkbox" label="מסומן"></checkbox></textarea>
   </section>
 
   <section>
     <h1>numberSpinner</h1>
     <div>
-      <input type="checkbox" name="numberSpinnerDisabled" id="numberSpinnerDisabled" ng-model="vm.numberSpinnerDisabled">
+      <input type="checkbox"
+        name="numberSpinnerDisabled"
+        id="numberSpinnerDisabled"
+        ng-model="vm.numberSpinnerDisabled">
       <label for="numberSpinnerDisabled">Disabled</label>
-      <br><br>
+      <br>
+      <br>
     </div>
-    <number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner>
+    <number-spinner model="vm.numberSpinnerValue"
+      total-value="50"
+      label="ערכים"
+      disabled="vm.numberSpinnerDisabled"></number-spinner>
     <h3>compact mode</h3>
-    <number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner>
-    <textarea disabled class="code"><number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
-    <textarea disabled class="code"><number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
+    <number-spinner model="vm.numberSpinnerValue"
+      total-value="50"
+      currency-icon="$"
+      label="ערכים"
+      compact="true"
+      disabled="vm.numberSpinnerDisabled"></number-spinner>
+    <textarea disabled
+      class="code"><number-spinner model="vm.numberSpinnerValue" total-value="50" label="ערכים" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
+    <textarea disabled
+      class="code"><number-spinner model="vm.numberSpinnerValue" total-value="50" currency-icon="$" label="ערכים" compact="true" disabled="vm.numberSpinnerDisabled"></number-spinner></textarea>
   </section>
 
   <section>
     <h1>dialog</h1>
-    <input type="checkbox" name="openDialog" id="openDialog" ng-model="vm.openDialog">
+    <input type="checkbox"
+      name="openDialog"
+      id="openDialog"
+      ng-model="vm.openDialog">
     <label for="openDialog">Dialog is open</label>
     <br>
     <br>
-    <span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
+    <span dialog
+      class="left"
+      is-open="vm.openDialog"
+      close-by-click-outside="false">
       <button>שמאל למטה</button>
       <dialog-content>תוכן ההודעה</dialog-content>
     </span>
-    <button dialog class="left top" close-by-click="false" close="vm.closeDialog">
+    <button dialog
+      class="left top"
+      close-by-click="false"
+      close="vm.closeDialog">
       שמאל למעלה
-      <dialog-content>תוכן ההודעה <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;" ng-click="vm.closeDialog()">X</a></dialog-content>
+      <dialog-content>תוכן ההודעה
+        <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;"
+          ng-click="vm.closeDialog()">X</a>
+      </dialog-content>
     </button>
-    <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button>
-    <button dialog class="top">אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button>
-    <button dialog class="no-arrow right">ימין ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
+    <button dialog
+      class="">ברירת מחדל
+      <dialog-content>תוכן ההודעה</dialog-content>
+    </button>
+    <button dialog
+      class="top">אמצע למעלה
+      <dialog-content>תוכן ההודעה</dialog-content>
+    </button>
+    <button dialog
+      class="no-arrow right">ימין ללא חץ
+      <dialog-content>תוכן ההודעה</dialog-content>
+    </button>
 
-    <textarea disabled class="code" rows="4"><span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
+    <textarea disabled
+      class="code"
+      rows="4"><span dialog class="left" is-open="vm.openDialog" close-by-click-outside="false">
       <button>שמאל למטה</button>
       <dialog-content>תוכן ההודעה</dialog-content>
     </span></textarea>
-    <textarea disabled class="code" rows="4">
+    <textarea disabled
+      class="code"
+      rows="4">
     <button dialog class="left top" close-by-click="false" close="vm.closeDialog">
       שמאל למעלה
       <dialog-content>תוכן ההודעה <a style="-webkit-appearance:button;-moz-appearance:button;-ms-appearance:button;" ng-click="vm.closeDialog()">X</a></dialog-content>
     </button></textarea>
-    <textarea disabled class="code" rows="1">
+    <textarea disabled
+      class="code"
+      rows="1">
     <button dialog class="">ברירת מחדל<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
-    <textarea disabled class="code" rows="1">
+    <textarea disabled
+      class="code"
+      rows="1">
     <button dialog class="top" >אמצע למעלה<dialog-content>תוכן ההודעה</dialog-content></button></textarea>
-    <textarea disabled class="code" rows="1">
+    <textarea disabled
+      class="code"
+      rows="1">
     <button dialog class="no-arrow right" >ימין ללא חץ<dialog-content>תוכן ההודעה</dialog-content></button>
     </textarea>
   </section>
@@ -58,15 +106,25 @@
   <section>
     <h1>modalBox</h1>
     <div>
-      <input type="checkbox" name="modalBoxIsShown" id="modalBoxIsShown" ng-model="vm.modalBoxIsShown">
+      <input type="checkbox"
+        name="modalBoxIsShown"
+        id="modalBoxIsShown"
+        ng-model="vm.modalBoxIsShown">
       <label for="modalBoxIsShown">Modal-box is open</label>
     </div>
     <div>
-      <input type="checkbox" name="modalBoxDarkScreen" id="modalBoxDarkScreen" ng-model="vm.modalBoxDarkScreen">
+      <input type="checkbox"
+        name="modalBoxDarkScreen"
+        id="modalBoxDarkScreen"
+        ng-model="vm.modalBoxDarkScreen">
       <label for="modalBoxDarkScreen">dark screen</label>
     </div>
-    <br><br>
-    <span modal-box is-open="vm.modalBoxIsShown" dark-screen="vm.modalBoxDarkScreen" width="{{vm.modalBoxWidth}}">
+    <br>
+    <br>
+    <span modal-box
+      is-open="vm.modalBoxIsShown"
+      dark-screen="vm.modalBoxDarkScreen"
+      width="{{vm.modalBoxWidth}}">
       <button>Open modal-box</button>
       <modal-box-header>כותרת</modal-box-header>
       <modal-box-content>
@@ -74,7 +132,9 @@
         <button ng-click="$root.$broadcast('modalBoxClose')">Emit סגירת מודל</button>
       </modal-box-content>
     </span>
-    <textarea disabled class="code" rows="9"><span modal-box>
+    <textarea disabled
+      class="code"
+      rows="9"><span modal-box>
     <button>Open modal-box</button>
     <modal-box-header>כותרת</modal-box-header>
     <modal-box-content>
@@ -89,8 +149,12 @@
     סכום: {{vm.inputCurrencyModel}} ₪
     <br>
     <br>
-    <input ng-model="vm.inputCurrencyModel" max="500" input-currency />
-    <textarea disabled class="code" rows="1"><input ng-model="vm.inputCurrencyModel" input-currency /></textarea>
+    <input ng-model="vm.inputCurrencyModel"
+      max="500"
+      input-currency />
+    <textarea disabled
+      class="code"
+      rows="1"><input ng-model="vm.inputCurrencyModel" input-currency /></textarea>
   </section>
 
   <section>
@@ -99,16 +163,49 @@
     <br> {{vm.customInputModel}}
     <br>
     <br>
-    <custom-input type="text" required="true" bind-id="custom-input-id" bind-name="customInputField" form-field="vm.demoForm.customInputField" error-message="vm.customInputErrorMessage" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder" tab-index="2"></custom-input>
+    <custom-input type="text"
+      required="true"
+      bind-id="custom-input-id"
+      bind-name="customInputField"
+      form-field="vm.demoForm.customInputField"
+      error-message="vm.customInputErrorMessage"
+      label="תווית"
+      model="vm.customInputModel"
+      icon="₪"
+      icon-class=""
+      description="טקסט עזר לתיאור השדה"
+      placeholder="placeholder"
+      tab-index="2"></custom-input>
     <br>
-    <custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
-      <input type="" style="color:blue;background:aqua;" ng-model="vm.customInputModel" />
+    <custom-input type="text"
+      bind-id="custom-input-id"
+      label="תווית"
+      icon="$"
+      icon-class=""
+      description="טקסט עזר לתיאור השדה">
+      <input type=""
+        style="color:blue;background:aqua;"
+        ng-model="vm.customInputModel" />
     </custom-input>
     <br>
-    <custom-input type="textarea" required="true" bind-id="custom-input-id" bind-name="customInputField" form-field="vm.demoForm.customInputField" error-message="vm.customInputErrorMessage" label="תווית" model="vm.customInputModel" description="טקסט עזר לתיאור השדה" placeholder="placeholder" tab-index="2"></custom-input>
+    <custom-input type="textarea"
+      required="true"
+      bind-id="custom-input-id"
+      bind-name="customInputField"
+      form-field="vm.demoForm.customInputField"
+      error-message="vm.customInputErrorMessage"
+      label="תווית"
+      model="vm.customInputModel"
+      description="טקסט עזר לתיאור השדה"
+      placeholder="placeholder"
+      tab-index="2"></custom-input>
     <br>
-    <textarea disabled class="code" rows="2"><custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input></textarea>
-    <textarea disabled class="code" rows="4"><custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
+    <textarea disabled
+      class="code"
+      rows="2"><custom-input type="text" bind-id="custom-input-id" bind-name="" label="תווית" model="vm.customInputModel" icon="₪" icon-class="" description="טקסט עזר לתיאור השדה" placeholder="placeholder"></custom-input></textarea>
+    <textarea disabled
+      class="code"
+      rows="4"><custom-input type="text" bind-id="custom-input-id" label="תווית" icon="$" icon-class="" description="טקסט עזר לתיאור השדה">
     <input type="" style="color:blue;background:aqua;" ng-model="vm.customInputModel" />
   </custom-input></textarea>
   </section>
@@ -119,8 +216,7 @@
     <br> {{vm.autoCompleteModel}}
     <br>
     <br>
-    <custom-input
-      bind-id="custom-input-id"
+    <custom-input bind-id="custom-input-id"
       label="אוטו קומפליט"
       icon-class=""
       model="vm.autoCompleteModel"
@@ -133,7 +229,9 @@
     </custom-input>
     <!--     <!-- auto-complete-row="vm.autoCompleteHtml" -->
 
-    <textarea disabled class="code" rows="4">
+    <textarea disabled
+      class="code"
+      rows="4">
       <custom-input
         bind-id="custom-input-id"
         label="אוטו קומפליט"
@@ -149,22 +247,23 @@
   </section>
 
   <section ng-init="vm.datepickerModel = ''">
-      <h1>customInput autocomplete</h1>
-      ng-model:
-      <br> {{vm.datepickerModel}}
-      <br>
-      <br>
-      <custom-input
-        bind-id="datepicker-id"
-        label="דייט פיקר"
-        icon-class=""
-        model="vm.datepickerModel"
-        description="טקסט עזר לתיאור השדה"
-        type="datepicker" >
-        <input
-        ng-model="vm.datepickerModel" input-date>
-      </custom-input>
-      <textarea disabled class="code" rows="4">
+    <h1>customInput autocomplete</h1>
+    ng-model:
+    <br> {{vm.datepickerModel}}
+    <br>
+    <br>
+    <custom-input bind-id="datepicker-id"
+      label="דייט פיקר"
+      icon-class=""
+      model="vm.datepickerModel"
+      description="טקסט עזר לתיאור השדה"
+      type="datepicker">
+      <input ng-model="vm.datepickerModel"
+        input-date>
+    </custom-input>
+    <textarea disabled
+      class="code"
+      rows="4">
         <custom-input
           bind-id="datepicker-id"
           label="דייט פיקר"
@@ -174,17 +273,24 @@
           type="datepicker">
         </custom-input>
       </textarea>
-    </section>
+  </section>
 
-    <section>
+  <section>
     <h1>expInput</h1>
     <div style="width:180px;margin-right:150px;margin-bottom:50px;">
-      <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input>
+      <exp-input month-model="vm.expInput.month"
+        year-model="vm.expInput.year"></exp-input>
     </div>
     <div style="width:180px;margin-right:150px;margin-bottom:50px;">
-      <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input>
+      <exp-input month-model="vm.expInput.month"
+        year-model="vm.expInput.year"
+        datepicker="false"></exp-input>
     </div>
-    <textarea disabled class="code" rows="2"><exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input></textarea>
-    <textarea disabled class="code" rows="2"> <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input></textarea>
+    <textarea disabled
+      class="code"
+      rows="2"><exp-input month-model="vm.expInput.month" year-model="vm.expInput.year"></exp-input></textarea>
+    <textarea disabled
+      class="code"
+      rows="2"> <exp-input month-model="vm.expInput.month" year-model="vm.expInput.year" datepicker="false"></exp-input></textarea>
   </section>
 </form>
