--- a/src/message/message.scss
+++ b/src/message/message.scss
@@ -76,6 +76,7 @@
   display: inline-block;
   width: 200px;
   padding: 10px;
+  margin: 0 15px;
   background: #595959;
   font-size: 20px;
   font-weight: 100;
