--- a/src/exp-datepicker/exp-datepicker.scss
+++ b/src/exp-datepicker/exp-datepicker.scss
@@ -2,15 +2,17 @@
   width: 350px;
   font-family: 'Open Sans Hebrew', arial, sans-serif;
 }
+
 .exp-datepicker .months {
   display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    font-size: 20px;
-    padding: 10px 0;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  font-size: 20px;
+  padding: 10px 0;
   color: #d9d9d9;
   border-bottom: solid 1px #f2f2f2;
 }
+
 .exp-datepicker .months div {
   -webkit-flex: 1 0 16.6%;
   -moz-flex: 1 0 16.6%;
@@ -20,14 +22,16 @@
   padding: 10px 15px;
   transition: 0.2s;
 }
+
 .exp-datepicker .years {
   display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    font-size: 24px;
-    padding: 20px 0 10px;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  font-size: 24px;
+  padding: 20px 0 10px;
   color: #bfbfbf;
 }
+
 .exp-datepicker .years div {
   -webkit-flex: 1 0 16.6%;
   -moz-flex: 1 0 16.6%;
@@ -35,12 +39,13 @@
   -o-flex: 1 0 16.6%;
   flex: 1 0 16.6%;
   padding: 10px 15px;
-  /*transition: 0.2s;*/
+  // transition: 0.2s;
 }
+
 .exp-datepicker .months div:hover,
 .exp-datepicker .years div:hover,
 .exp-datepicker .months div.show,
 .exp-datepicker .years div.show {
   background: #f2f2f2;
-  color: #17bb88;
+  color: #25b5c0;
 }
