datepicker class names

--- a/lib/datepicker/datepicker.scss
+++ b/lib/datepicker/datepicker.scss
@@ -23,10 +23,10 @@
 .datepicker * {
   box-sizing: border-box;
 }
-.datepicker .column {
+.datepicker .datepicker-column {
   flex: 1;
 }
-.datepicker .column:last-of-type {
+.datepicker .datepicker-column:last-of-type {
   flex: 2;
   margin-right: 35px;
 }
@@ -195,17 +195,17 @@
   position: relative;
   user-select: none;
 }
-.datepicker .day-list .row {
+.datepicker .day-list .datepicker-row {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
   min-height: 53px;
 }
-.datepicker .day-list.hebrew-day-list .row {
+.datepicker .day-list.hebrew-day-list .datepicker-row {
   flex-direction: row;
   justify-content: flex-start;
 }
-.datepicker .day-list .row:nth-of-type(2n-1) {
+.datepicker .day-list .datepicker-row:nth-of-type(2n-1) {
   background: rgb(250, 250, 250);
 }
 .datepicker .day-list .day {
