--- a/src/custom-input/custom-input.scss
+++ b/src/custom-input/custom-input.scss
@@ -77,7 +77,7 @@
     line-height: 25px;
 
     .tooltip.ion-ios-close-outline::before {
-      color: #ff7378;
+      color: #f50057;
     }
 
     .tooltip.pending,
