--- a/src/exp-datepicker/exp-datepicker.scss
+++ b/src/exp-datepicker/exp-datepicker.scss
@@ -1,58 +1,58 @@
 .exp-datepicker {
   width: 350px;
   font-family: 'Open Sans Hebrew', arial, sans-serif;
-}
 
-.exp-datepicker .fa {
-  color: #bbb;
-  font-size: 15px;
-  cursor: pointer;
-  line-height: 19px;
-}
+  .fa {
+    color: #bbb;
+    font-size: 15px;
+    cursor: pointer;
+    line-height: 19px;
+  }
 
-.exp-datepicker .months {
-  display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap;
-  font-size: 20px;
-  padding: 10px 0;
-  color: #d9d9d9;
-  border-bottom: solid 1px #f2f2f2;
-}
+  .months {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    font-size: 20px;
+    padding: 10px 0;
+    color: #d9d9d9;
+    border-bottom: solid 1px #f2f2f2;
+  }
 
-.exp-datepicker .months div {
-  -webkit-flex: 1 0 16.6%;
-  -moz-flex: 1 0 16.6%;
-  -ms-flex: 1 0 16.6%;
-  -o-flex: 1 0 16.6%;
-  flex: 1 0 16.6%;
-  padding: 10px 15px;
-  transition: 0.2s;
-}
+  .months div {
+    -webkit-flex: 1 0 16.6%;
+    -moz-flex: 1 0 16.6%;
+    -ms-flex: 1 0 16.6%;
+    -o-flex: 1 0 16.6%;
+    flex: 1 0 16.6%;
+    padding: 10px 15px;
+    transition: 0.2s;
+  }
 
-.exp-datepicker .years {
-  display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap;
-  font-size: 24px;
-  padding: 20px 0 10px;
-  color: #bfbfbf;
-}
+  .years {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    font-size: 24px;
+    padding: 20px 0 10px;
+    color: #bfbfbf;
+  }
 
-.exp-datepicker .years div {
-  -webkit-flex: 1 0 22%;
-  -moz-flex: 1 0 22%;
-  -ms-flex: 1 0 22%;
-  -o-flex: 1 0 22%;
-  flex: 1 0 22%;
-  padding: 10px 15px;
-  // transition: 0.2s;
-}
+  .years div {
+    -webkit-flex: 1 0 22%;
+    -moz-flex: 1 0 22%;
+    -ms-flex: 1 0 22%;
+    -o-flex: 1 0 22%;
+    flex: 1 0 22%;
+    padding: 10px 15px;
+    // transition: 0.2s;
+  }
 
-.exp-datepicker .months div:hover,
-.exp-datepicker .years div:hover,
-.exp-datepicker .months div.show,
-.exp-datepicker .years div.show {
-  background: #f2f2f2;
-  color: #25b5c0;
+  .months div:hover,
+  .years div:hover,
+  .months div.show,
+  .years div.show {
+    background: #f2f2f2;
+    color: #25b5c0;
+  }
 }
