--- a/src/exp-datepicker/exp-datepicker.scss
+++ b/src/exp-datepicker/exp-datepicker.scss
@@ -9,10 +9,18 @@
     line-height: 19px;
   }
 
-  .months {
+  .months,
+  .years {
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  .months {
     font-size: 20px;
     padding: 10px 0;
     color: #d9d9d9;
@@ -30,9 +38,6 @@
   }
 
   .years {
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
     font-size: 24px;
     padding: 20px 0 10px;
     color: #bfbfbf;
