--- a/lib/modal-box/modal-box.scss
+++ b/lib/modal-box/modal-box.scss
@@ -11,13 +11,15 @@
   &.dark {
     background: rgba(0, 0, 0, 0.4);
   }
-  &:before {
+
+  &::before {
     content: '';
     display: inline-block;
     width: 0;
     height: 100vh;
     vertical-align: middle;
   }
+
   .modal-box-container {
     max-height: 95vh;
     display: inline-flex;
@@ -25,11 +27,12 @@
     position: relative;
     vertical-align: middle;
     width: 550px;
-    background-color: #ffffff;
+    background-color: #fff;
     border-radius: 8px;
     box-shadow: 0px 3px 18px 1px #888;
     user-select: text;
   }
+
   .modal-box-close {
     display: inline-block;
     font-size: 30px;
@@ -42,6 +45,7 @@
     margin: 10px 0 0 10px;
     cursor: pointer;
   }
+
   .modal-box-header {
     color: #7f7f7f;
     font-size: 28px;
@@ -49,6 +53,7 @@
     padding: 15px 20px;
     height: 68px;
   }
+
   .modal-box-content {
     flex: 1;
     overflow: auto;
@@ -56,9 +61,11 @@
     line-height: normal;
     padding: 15px 20px;
   }
-  .modal-box-content .ps-container>.ps-scrollbar-y-rail {
+
+  .modal-box-content .ps-container > .ps-scrollbar-y-rail {
     opacity: .6;
   }
+
   .modal-box-footer {
     height: 60px;
   }
